handle gc overhead limit (#225)
GitOrigin-RevId: 283f8ec0f5a6a7aef86c7af647691de9fa854430